# Lingus

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml  requirements.txt
src/lingus/: __init__.py  app.py  arbiter.py  chat_trends.py  config.py  context.py  control.py  dashboard.py  eval.py  generator.py  humanizer.py  logging.py  monitor.py  output_governor.py  promotions.py  safety.py  video.py  webui.py  world_state.py  yt_dlp_api.py
src/lingus/adapters/: _ffmpeg.py  base.py  file_replay.py  twitch.py  youtube.py  youtube_chat.py
src/lingus/memory/: __init__.py  _io.py  episodic.py  repetition.py  semantic.py
src/lingus/models/: audio_gate.py  base.py  faster_whisper_asr.py  local_vision.py  openai_llm.py
src/lingus/persona/: loader.py  schema.py
src/lingus/persona/personas/: default.yaml
src/lingus/research/: __init__.py  cache.py  identity.py  profiler.py  search.py
tests/: test_app.py  test_arbiter.py  test_asr_filter.py  test_audio_gate.py  test_chat_trends.py  test_config.py  test_context.py  test_control.py  test_episodic.py  test_eval.py  test_file_replay.py  test_generator.py  test_humanizer.py  test_local_vision.py  test_memory.py  test_monitor.py  test_openai_llm.py  test_output_governor.py  test_persona.py  test_promotions.py  test_safety.py  test_semantic.py  test_twitch.py  test_video.py  test_world_state.py  test_youtube.py  test_youtube_chat.py  test_yt_dlp_api.py
tests/research/: test_research.py  test_seed.py
tests/samples/cake/: scene.jsonl  transcript.jsonl
tests/samples/demo/: chat.jsonl  transcript.jsonl
